--- a/app/src/main/res/layout/activity_appnutzungszweck.xml
+++ b/app/src/main/res/layout/activity_appnutzungszweck.xml
@@ -38,11 +38,11 @@
         android:layout_marginTop="20dp"
         android:text="Stresslevel reduzieren"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/textView73"
-        app:layout_constraintTop_toBottomOf="@+id/textView73" />
+        app:layout_constraintStart_toStartOf="@+id/activityName"
+        app:layout_constraintTop_toBottomOf="@+id/activityName" />
 
     <TextView
-        android:id="@+id/textView73"
+        android:id="@+id/activityName"
         android:layout_width="340dp"
         android:layout_height="86dp"
         android:layout_marginTop="88dp"
