--- a/app/src/main/res/layout/activity_ubungen_1.xml
+++ b/app/src/main/res/layout/activity_ubungen_1.xml
@@ -44,8 +44,8 @@
             android:layout_marginTop="20dp"
             android:text="Übungsname"
             android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="@+id/textView73"
-            app:layout_constraintTop_toBottomOf="@+id/textView73" />
+            app:layout_constraintStart_toStartOf="@+id/activityName"
+            app:layout_constraintTop_toBottomOf="@+id/activityName" />
 
         <TextView
             android:id="@+id/textView103"
