--- a/app/src/main/res/layout/activity_ubungen_1_2.xml
+++ b/app/src/main/res/layout/activity_ubungen_1_2.xml
@@ -50,11 +50,27 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/include16" />
 
-            <CheckBox
-                android:id="@+id/daily_activity"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="CheckBox" />
+                android:layout_height="49dp"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/daily_activity"
+                    android:layout_width="49dp"
+                    android:layout_height="match_parent"
+                    android:enabled="false" />
+
+                <TextView
+                    android:id="@+id/textView128"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="TextView"
+                    tools:layout_editor_absoluteX="16dp"
+                    tools:layout_editor_absoluteY="137dp" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/textView103"
