--- a/app/src/main/res/layout/activity_ubungen_4.xml
+++ b/app/src/main/res/layout/activity_ubungen_4.xml
@@ -3,16 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <include layout="@layout/toolbar_1" />
+    android:layout_height="match_parent"
+    tools:context=".OpenActivityItem">
 
     <include
-        android:id="@+id/include13"
-        layout="@layout/toolbar_bottom" />
+        android:id="@+id/include3"
+        layout="@layout/toolbar_3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_bottom"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="60dp" />
 
     <EditText
-        android:id="@+id/editTextTextMultiLine2"
+        android:id="@+id/activityContent"
         android:layout_width="344dp"
         android:layout_height="340dp"
         android:layout_marginStart="32dp"
@@ -31,14 +40,13 @@
     <LinearLayout
         android:id="@+id/linearLayout4"
         android:layout_width="0dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="28dp"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include13">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <CheckBox
             android:id="@+id/checkBox13"
@@ -46,12 +54,14 @@
             android:layout_height="43dp"
             android:layout_gravity="left"
             android:layout_marginRight="30dp"
-            android:textSize="96sp" />
+            android:textSize="96sp"
+            android:enabled="false"
+            />
 
         <TextView
-            android:id="@+id/textView73"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:id="@+id/activityName"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
             android:text="Übung 1"
@@ -76,8 +86,14 @@
         android:layout_marginTop="64dp"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2"
+        app:layout_constraintTop_toBottomOf="@+id/activityContent"
         tools:layout_editor_absoluteX="2dp">
+
+        <Button
+            android:id="@+id/button19"
+            android:layout_width="168dp"
+            android:layout_height="58dp"
+            android:text="Übung abbrechen" />
 
         <Button
             android:id="@+id/button20"
@@ -85,11 +101,6 @@
             android:layout_height="58dp"
             android:text="Weiter" />
 
-        <Button
-            android:id="@+id/button19"
-            android:layout_width="168dp"
-            android:layout_height="58dp"
-            android:text="Übung abbrechen" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
