--- a/app/src/main/res/layout/item_with_checkbox.xml
+++ b/app/src/main/res/layout/item_with_checkbox.xml
@@ -9,12 +9,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
-        <CheckBox
-            android:id="@+id/checkBox11"
-            android:layout_width="269dp"
-            android:layout_height="53dp"
-            android:text="CheckBox" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/checkBox11"
+                android:layout_width="76dp"
+                android:layout_height="56dp"
+                android:enabled="false" />
+
+            <TextView
+                android:id="@+id/textView73"
+                android:layout_width="330dp"
+                android:layout_height="match_parent"
+                android:text="TextView" />
+        </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
