--- a/app/src/main/res/layout/toolbar_1.xml
+++ b/app/src/main/res/layout/toolbar_1.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/toolbar_icon_background"
+            android:onClick="handleHerzClick"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/toolbar_title"
             app:layout_constraintStart_toStartOf="parent"
