--- a/app/src/main/res/layout/activity_ubungen_3.xml
+++ b/app/src/main/res/layout/activity_ubungen_3.xml
@@ -46,7 +46,7 @@
     <TextView
         android:id="@+id/activityDiscription"
         android:layout_width="347dp"
-        android:layout_height="94dp"
+        android:layout_height="wrap_content"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="@+id/activityName"
         app:layout_constraintHorizontal_bias="0.0"
