--- a/app/src/main/res/layout/toolbar_3.xml
+++ b/app/src/main/res/layout/toolbar_3.xml
@@ -33,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/toolbar_icon_background"
+            android:onClick="handleHerzClick"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/backImageView"
             app:layout_constraintTop_toTopOf="parent"
