--- a/app/src/main/res/layout/activity_anmeldung_1.xml
+++ b/app/src/main/res/layout/activity_anmeldung_1.xml
@@ -8,7 +8,7 @@
 
 
     <include
-        android:id="@+id/include28"
+        android:id="@+id/loginToolBar"
         layout="@layout/toolbar_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,7 +19,7 @@
         layout="@layout/toolbar_bottom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include28" />
+        app:layout_constraintTop_toBottomOf="@+id/loginToolBar" />
 
     <TextView
         android:id="@+id/textView6"
