--- a/app/src/main/res/layout/activity_list_item.xml
+++ b/app/src/main/res/layout/activity_list_item.xml
@@ -22,7 +22,7 @@
                 android:layout_width="135dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.3"
-                android:text="Date" />
+                android:text="Datum" />
 
             <TextView
                 android:id="@+id/diaryDate"
@@ -43,7 +43,7 @@
                 android:layout_width="135dp"
                 android:layout_height="44dp"
                 android:layout_weight="0.3"
-                android:text="Content" />
+                android:text="Inhalt " />
 
             <TextView
                 android:id="@+id/diaryContent"
@@ -53,6 +53,13 @@
                 android:text="TextView" />
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/buttonDeleteEintrag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="löschen" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
