--- a/app/src/main/res/layout/activity_wiki.xml
+++ b/app/src/main/res/layout/activity_wiki.xml
@@ -29,8 +29,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout8"
-        android:layout_width="361dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="46dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="13dp"
         android:layout_marginEnd="25dp"
@@ -39,32 +39,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activityName">
 
-        <SearchView
-            android:layout_width="41dp"
-            android:layout_height="34dp">
-
-            <View
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                android:background="?android:attr/listDivider" />
-
-            <View
-                android:id="@+id/divider11"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                android:background="?android:attr/listDivider" />
-        </SearchView>
-
         <EditText
             android:id="@+id/wikiSearchEditText"
             android:layout_width="301dp"
             android:layout_height="48dp"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:onClick="handleSearch" />
+            android:inputType="textPersonName" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="handleSearch"
+            app:srcCompat="@android:drawable/ic_menu_search" />
 
     </LinearLayout>
 
