fixed profile and hilfe

--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -7,7 +7,7 @@
     tools:context=".Profil">
 
     <include
-        android:id="@+id/toolbar_top"
+        android:id="@+id/profileButtonToolBar"
         layout="@layout/toolbar_3" />
 
     <include
