--- a/app/src/main/res/layout/activity_tagesziel_1.xml
+++ b/app/src/main/res/layout/activity_tagesziel_1.xml
@@ -83,8 +83,8 @@
                 android:id="@+id/textView96"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="(oder Monats-/Jahresübersicht)" />
+                android:layout_weight="1"/>
+
 
         </LinearLayout>
 
