--- a/app/src/main/res/layout/toolbar_3.xml
+++ b/app/src/main/res/layout/toolbar_3.xml
@@ -29,7 +29,7 @@
             app:srcCompat="@mipmap/ic_back_arrow_black_2" />
 
         <ImageView
-            android:id="@+id/imageView10"
+            android:id="@+id/herzImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/toolbar_icon_background"
@@ -61,7 +61,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView11"
-            app:layout_constraintStart_toEndOf="@+id/imageView10"
+            app:layout_constraintStart_toEndOf="@+id/herzImageView"
             app:layout_constraintTop_toTopOf="parent" />
 
 
