--- a/app/src/main/res/layout/activiry_registrierung_2.xml
+++ b/app/src/main/res/layout/activiry_registrierung_2.xml
@@ -15,7 +15,7 @@
     <LinearLayout
         android:id="@+id/linearLayout5"
         android:layout_width="351dp"
-        android:layout_height="245dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="116dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -60,47 +60,44 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView61" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textInputEditText2"
+        <EditText
+            android:id="@+id/editTextNumber"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
             android:hint="Code eingeben"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/textView62"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView62"
-            app:layout_constraintTop_toBottomOf="@+id/textView62"
-            app:layout_constraintVertical_bias="0.0" />
+            android:inputType="number" />
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="286dp"
+            android:layout_height="33dp"
+            android:layout_gravity="end"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="221dp"
-        android:layout_height="30dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
+            <TextView
+                android:id="@+id/textView71"
+                android:layout_width="25dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="codeSenden"
+                android:text="Code erneut senden"
+                android:textColor="#2196F3"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/textView71"
-            android:layout_width="74dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Code erneut senden"
-            android:textColor="#2196F3"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            <TextView
+                android:id="@+id/bestatigenTextView"
+                android:layout_width="4dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="handleBestatigen"
+                android:text="Bestätigen"
+                android:textColor="#2196F3"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textView63" />
 
-        <TextView
-            android:id="@+id/textView87"
-            android:layout_width="4dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="handleBestaetigen"
-            android:text="Bestätigen"
-            android:textColor="#2196F3"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView63" />
+        </LinearLayout>
 
     </LinearLayout>
 
