--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -23,6 +23,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
+    <LinearLayout
+        android:id="@+id/prepAnsView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:gravity="bottom"
+        android:layout_weight="2"
+        android:orientation="vertical"
+        android:elevation="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/messagesRecyclerView"
+        app:layout_constraintVertical_bias="1.0"></LinearLayout>
+
     <EditText
         android:id="@+id/inputMessage"
         style="@style/Widget.AppCompat.AutoCompleteTextView"
