--- a/app/src/main/res/layout/activity_anmeldung_1.xml
+++ b/app/src/main/res/layout/activity_anmeldung_1.xml
@@ -34,21 +34,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mainEmailEditText" />
 
+
     <EditText
         android:id="@+id/mainEmailEditText"
-        android:layout_width="301dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="62dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="48dp"
         android:ems="10"
         android:hint="E-Mail eingeben"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-
 
     <TextView
         android:id="@+id/textView"
@@ -66,7 +66,7 @@
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
-        android:layout_height="19dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="62dp"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="307dp"
