--- a/app/src/main/res/layout/activity_einstellungen.xml
+++ b/app/src/main/res/layout/activity_einstellungen.xml
@@ -22,8 +22,8 @@
         app:layout_constraintTop_toBottomOf="@+id/include6" />
 
     <LinearLayout
-        android:layout_width="289dp"
-        android:layout_height="468dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
@@ -66,7 +66,6 @@
                 android:id="@+id/textView76"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="20dp"
                 android:text="Schriftgröße"
                 android:textStyle="bold"
                 app:layout_column="0"
@@ -82,8 +81,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical"
-                android:paddingTop="20dp"
                 app:layout_column="0"
                 app:layout_row="2">
 
@@ -106,14 +105,15 @@
                 android:id="@+id/switch4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 app:layout_column="1"
                 app:layout_row="2" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical"
-                android:paddingTop="20dp"
                 app:layout_column="0"
                 app:layout_row="3">
 
@@ -128,13 +128,15 @@
                     android:id="@+id/textView81"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Mitteilungen" />
+                    android:text="Mitteilungen"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/textView82"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Erinnerung an Tagesziele" />
+                    android:text="Erinnerung an Tagesziele"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -147,7 +149,8 @@
                 <Switch
                     android:id="@+id/switch5"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp" />
 
                 <Switch
                     android:id="@+id/switch7"
@@ -160,8 +163,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical"
-                android:paddingTop="20dp"
                 app:layout_column="0"
                 app:layout_row="4">
 
@@ -182,7 +185,6 @@
                     android:id="@+id/spinner3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:entries="@array/data2" />
             </LinearLayout>
 
@@ -190,6 +192,7 @@
                 android:id="@+id/switch8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 app:layout_column="1"
                 app:layout_row="4" />
 
@@ -198,7 +201,6 @@
                 android:layout_width="69dp"
                 android:layout_height="wrap_content"
                 app:layout_column="1"
-                app:layout_gravity="center"
                 app:layout_row="1" />
 
         </androidx.gridlayout.widget.GridLayout>
