--- a/app/src/main/res/layout/activity_datenschutz.xml
+++ b/app/src/main/res/layout/activity_datenschutz.xml
@@ -11,15 +11,15 @@
 
     <TextView
         android:id="@+id/textView29"
-        android:layout_width="288dp"
-        android:layout_height="464dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="72dp"
+        android:layout_width="324dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="30dp"
         android:text="Der Schutz deiner Daten und Privatsphäre ist uns sehr wichtig. Wir sind uns bewusst, dass Gesundheitsinformationen sehr sensibel sind und den maximalen Schutz benötigen. Deshalb erheben wir so wenige persönliche Daten wie möglich und sichern diese mit den höchsten technischen Standards. Wir wir beim Datenschutz genau vorgehen, das erklärt dir unsere nun folgende Datenschutzerklärung. Und kontaktiere uns gerne, wenn du sonst noch Fragen hast kannst du uns jederzeit eine E-Mail senden."
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/includeDatenschutz" />
 </androidx.constraintlayout.widget.ConstraintLayout>
