--- a/app/src/main/res/layout/activity_registrierung_1.xml
+++ b/app/src/main/res/layout/activity_registrierung_1.xml
@@ -169,7 +169,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
-        android:layout_marginEnd="2dp"
         android:layout_marginBottom="38dp"
         android:orientation="horizontal"
         android:padding="10dp"
@@ -189,7 +188,7 @@
 
         <TextView
             android:id="@+id/textView20"
-            android:layout_width="68dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:onClick="abbrechen"
