--- a/app/src/main/res/layout/toolbar_1.xml
+++ b/app/src/main/res/layout/toolbar_1.xml
@@ -33,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/toolbar_icon_background"
+            android:onClick="handleReload"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
