fixed bug reload

--- a/app/src/main/res/layout/toolbar_1.xml
+++ b/app/src/main/res/layout/toolbar_1.xml
@@ -29,7 +29,7 @@
             app:srcCompat="@mipmap/ic_notfallkontakt" />
 
         <ImageView
-            android:id="@+id/imageView11"
+            android:id="@+id/reloadImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/toolbar_icon_background"
@@ -52,7 +52,7 @@
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageView11"
+            app:layout_constraintEnd_toStartOf="@+id/reloadImageView"
             app:layout_constraintStart_toEndOf="@+id/herzImageView"
             app:layout_constraintTop_toTopOf="parent" />
 
