--- a/app/src/main/res/layout/activity_notfallkontakt.xml
+++ b/app/src/main/res/layout/activity_notfallkontakt.xml
@@ -42,11 +42,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView68" />
 
-        <TextView
-            android:id="@+id/textView127"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tel.:  0800 181 0771" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView127"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tel.:  " />
+
+            <TextView
+                android:id="@+id/nktextView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0800 181 0771" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textView98"
@@ -67,13 +79,50 @@
             android:id="@+id/textView124"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tel.: 030 - 44 01 06 07  (Englischer Service)" />
+            android:text="(Englischer Service)    " />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView87"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tel.:  " />
+
+            <TextView
+                android:id="@+id/nktextView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="030 - 44 01 06 07" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textView125"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tel.: 030 - 44 0106 06  (Russischer Service)" />
+            android:layout_marginTop="20dp"
+            android:text="(Russischer Service)  " />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView85"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tel.:  " />
+
+            <TextView
+                android:id="@+id/nktextView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="030 - 44 0106 06" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textView99"
@@ -87,11 +136,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView70" />
 
-        <TextView
-            android:id="@+id/textView126"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tel.: 0800 1110 111 " />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView93"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Tel.:  " />
+
+            <TextView
+                android:id="@+id/nktextView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0800 1110 111 " />
+        </LinearLayout>
 
     </LinearLayout>
 
