--- a/app/src/main/res/layout/activity_anmeldung_1.xml
+++ b/app/src/main/res/layout/activity_anmeldung_1.xml
@@ -80,7 +80,7 @@
             android:textColor="@color/black" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/button2anm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
