--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -42,6 +42,7 @@
     </style>
 
     <style name="Theme.TherapiApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+<!--    <style name="Theme.AppCompat.AppBarOverlay" parent="Theme.AppCompat.Light.NoActionBar" />-->
 
     <style name="Theme.TherapiApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
