--- a/app/src/main/res/layout/activity_anmeldunf_erfolgreich.xml
+++ b/app/src/main/res/layout/activity_anmeldunf_erfolgreich.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginTop="4dp"
-            android:text="Sie haben sich erfolgreich bei App-Name angemeldet! Sie können nun fortfahren mit der Benutzung unserer App"
+            android:text="Du hast dich erfolgreich angemeldet und kannst nun fortfahren und die App nutzen."
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/textView65"
             app:layout_constraintStart_toStartOf="@+id/textView65"
