--- a/app/src/main/res/layout/activity_notfallkontakt.xml
+++ b/app/src/main/res/layout/activity_notfallkontakt.xml
@@ -24,7 +24,7 @@
             android:id="@+id/textView67"
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:text="Reden Sie mit jemanden über Ihre Gedanken und Gefühle! "
+            android:text="Rede doch mit jemanden über deine Gedanken und Gefühle, wenn es dir gerade schlecht geht!"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.493"
             app:layout_constraintStart_toStartOf="parent"
@@ -122,37 +122,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="030 - 44 0106 06" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/textView99"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginTop="29dp"
-            android:text="Telefonseelsorge Deutschland"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.493"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView70" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView93"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Tel.:  " />
-
-            <TextView
-                android:id="@+id/nktextView4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="0800 1110 111 " />
         </LinearLayout>
 
     </LinearLayout>
